--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,15 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# IntelliJ
+.idea
+
+# Environment file
+.env
+
+# Data dir
+data
+
+# Settings file
+settings.json
