Switch to rethinkdb-dash for much much better interactions with rethinkdb

--- a/settings.json.example
+++ b/settings.json.example
@@ -8,8 +8,5 @@
         ""
     ],
 
-    "bot_says_welcome": false,
-
-    "rethinkdb_host": "127.0.0.1",
-    "rethinkdb_port": 28015
+    "bot_says_welcome": false
 }
