--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/RyanTheAllmighty/AllmightyBot-Node",
   "dependencies": {
-    "rethinkdb": "^1.16.2",
+    "rethinkdbdash": "^1.16.13",
     "string-format": "^0.5.0",
     "twitch-irc": "^1.2.5",
     "twitch-irc-api": "^1.0.1",
