--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "homepage": "https://github.com/RyanTheAllmighty/AllmightyBot-Node",
   "dependencies": {
+    "request": "^2.54.0",
     "rethinkdbdash": "^1.16.13",
     "string-format": "^0.5.0",
     "twitch-irc": "^1.2.5",
-    "twitch-irc-api": "^1.0.1",
     "twitch-irc-db": "^1.0.0"
   }
 }
