--- a/settings.json.example
+++ b/settings.json.example
@@ -4,9 +4,7 @@
 
     "bot_username": "",
     "bot_oauth_token": "",
-    "channels_to_join": [
-        ""
-    ],
+    "channel_to_join": "",
 
     "bot_says_welcome": false
 }
