Move basic commands to their own files (I like it better that way, more organised) and also add in some convienience functions into connection for checking status of user

--- a/settings.json.example
+++ b/settings.json.example
@@ -6,5 +6,7 @@
     "bot_oauth_token": "",
     "channel_to_join": "",
 
-    "bot_says_welcome": false
+    "bot_says_welcome": false,
+    "default_timeout": 600,
+    "default_slowmode_time": 30
 }
