Add in protection against being global banned with a setting for the limit on number of messages sent per 30 seconds. 100 is the limit for moderators, 20 for normal users

--- a/settings.json.example
+++ b/settings.json.example
@@ -8,5 +8,7 @@
 
     "bot_says_welcome": false,
     "default_timeout": 600,
-    "default_slowmode_time": 30
+    "default_slowmode_time": 30,
+
+    "bot_speak_limit_per_30s": 80
 }
