Add in a link listener to listen for and warn/timeout users for posting links

--- a/lang.json.example
+++ b/lang.json.example
@@ -8,5 +8,7 @@
     "seed_pick_none": "There was no winner as no seeds were submitted!",
     "seed_pick": "The winner was {0} with a seed of '{1}'",
     "seed_details": "The seed for this world was picked by {0} and is '{1}'",
-    "example": "This is an example response"
+    "example": "This is an example response",
+    "posting_link_warning": "Please ask permission before posting links! This is a warning! Next time will be a timeout!",
+    "posting_link_timeout": "Please ask permission before posting links! [Timed out] [{0}]"
 }
