--- a/settings.json.example
+++ b/settings.json.example
@@ -10,5 +10,6 @@
     "default_timeout": 600,
     "default_slowmode_time": 30,
 
-    "bot_speak_limit_per_30s": 80
+    "bot_speak_limit_per_30s": 80,
+    "link_timeout_length": 600
 }
