--- a/lang.json.example
+++ b/lang.json.example
@@ -11,5 +11,7 @@
     "example": "This is an example response",
     "posting_link_warning": "Please ask permission before posting links! This is a warning! Next time will be a timeout!",
     "posting_link_timeout": "Please ask permission before posting links! [Timed out] [{0}]",
-    "uptime_today": "{0} has been live for {1}!"
+    "uptime_today": "{0} has been live for {1}!",
+    "viewers": "There are currently {0} viewers here!",
+    "not_online": "The stream is not online so there are no viewers!"
 }
