--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rethinkdbdash": "^1.16.13",
     "string-format": "^0.5.0",
     "twitch-irc": "^1.2.5",
+    "twitch-irc-api": "^1.0.1",
     "twitch-irc-db": "^1.0.0"
   }
 }
