--- a/lang.json.example
+++ b/lang.json.example
@@ -15,5 +15,6 @@
     "viewers": "There are currently {0} viewers here!",
     "not_online": "The stream is not online so there are no viewers!",
     "title": "The title of the stream is '{0}' and the game is '{1}'",
-    "strawpoll": "A StrawPoll has been created! Go vote on it at http://strawpoll.me/{0}"
+    "strawpoll": "A StrawPoll has been created! Go vote on it at http://strawpoll.me/{0}",
+    "random_user": "Abra Kadabra, I choose you {0}"
 }
