--- a/lang.json.example
+++ b/lang.json.example
@@ -12,6 +12,7 @@
     "posting_link_warning": "Please ask permission before posting links! This is a warning! Next time will be a timeout!",
     "posting_link_timeout": "Please ask permission before posting links! [Timed out] [{0}]",
     "uptime_today": "{0} has been live for {1}!",
+    "uptime_offline": "{0} is not currently streaming!",
     "viewers": "There are currently {0} viewers here!",
     "not_online": "The stream is not online so there are no viewers!",
     "title": "The title of the stream is '{0}' and the game is '{1}'",
