--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/RyanTheAllmighty/AllmightyBot-Node",
   "dependencies": {
+    "async": "^0.9.0",
     "lodash": "^3.6.0",
     "request": "^2.54.0",
     "rethinkdbdash": "^1.16.13",
