--- a/lang.json.example
+++ b/lang.json.example
@@ -24,5 +24,6 @@
     "stream_started": "Hey everyone! The streams started!",
     "stream_not_started": "Silly strimmer! You haven't started the stream!",
     "stream_already_started": "Silly strimmer! You've already started the stream!",
-    "stream_ended": "The stream has ended! Thankyou all for showing up!"
+    "stream_ended": "The stream has ended! Thankyou all for showing up!",
+    "stream_start_remind": "Hey strimmer! Just a reminder that you haven't started the stream!"
 }
