Fix all API calls to use the new API methods which fixes the title and viewers commands

--- a/settings.json.example
+++ b/settings.json.example
@@ -11,6 +11,9 @@
         "some_username"
     ],
 
+    "api_client_id": "",
+    "api_access_token": "",
+
     "bot_says_welcome": false,
 
     "bot_speak_limit_per_30s": 80,
