Add in the ability to send whispers which we do now when a users requests their own eyetime

--- a/lang.json.example
+++ b/lang.json.example
@@ -24,5 +24,6 @@
     "stream_ended": "The stream has ended! Thankyou all for showing up!",
     "stream_start_remind": "Hey strimmer! Just a reminder that you haven't started the stream!",
     "eyetime": "{0} has been in the stream for {1}!",
-    "eyetime_not_found": "{0} has not visited the stream before!"
+    "eyetime_not_found": "{0} has not visited the stream before!",
+    "eyetime_whisper": "You've been in the stream for {0}!"
 }
