--- a/package.json
+++ b/package.json
@@ -21,27 +21,36 @@
     "bugs": {
         "url": "https://github.com/RyanTheAllmighty/AllmightyBot/issues"
     },
+    "contributors": [
+        {
+            "name": "Ryan Dowling",
+            "email": "ryan@ryandowling.me",
+            "url": "https://github.com/RyanTheAllmighty"
+        }
+    ],
+    "keywords": [
+        "twitch",
+        "bot",
+        "irc",
+        "chat bot"
+    ],
     "homepage": "https://github.com/RyanTheAllmighty/AllmightyBot",
     "dependencies": {
-        "async": "^1.4.2",
-        "lodash": "^3.10.1",
         "nedb": "^1.2.1",
+        "async": "^1.5.2",
+        "lodash": "^3.10.1",
         "request": "^2.64.0",
         "string-format": "^0.5.0",
-        "tmi.js": "0.0.23"
+        "tmi.js": ">=0.0.24 <1.0.0"
     },
     "devDependencies": {
         "chai": "^3.5.0",
-        "grunt": "^0.4.5",
-        "grunt-cli": "^0.1.13",
-        "grunt-contrib-jshint": "^0.11.3",
-        "grunt-mocha-test": "^0.12.7",
         "gulp": "^3.9.0",
-        "gulp-jscs": "^3.0.2",
-        "gulp-jshint": "^2.0.0",
-        "gulp-mocha": "^2.2.0",
-        "jshint": "^2.9.1",
         "mocha": "^2.4.5",
-        "sinon": "^1.17.3"
+        "jshint": "^2.9.1",
+        "sinon": "^1.17.3",
+        "gulp-jscs": "^3.0.2",
+        "gulp-mocha": "^2.2.0",
+        "gulp-jshint": "^2.0.0"
     }
 }
