--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     ],
     "keywords": [
         "twitch",
+        "livecoding",
+        "beam",
         "bot",
         "irc",
         "chat bot"
@@ -38,8 +40,11 @@
     "dependencies": {
         "nedb": "^1.2.1",
         "async": "^1.5.2",
+        "vorpal": "^1.7.7",
         "lodash": "^3.10.1",
         "request": "^2.64.0",
+        "commander": "^2.9.0",
+        "inquirer": "^0.11.4",
         "string-format": "^0.5.0",
         "tmi.js": ">=0.0.24 <1.0.0"
     },
