--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
     ],
     "homepage": "https://github.com/RyanTheAllmighty/AllmightyBot",
     "dependencies": {
-        "nedb": "^1.2.1",
         "async": "^1.5.2",
-        "vorpal": "^1.7.7",
-        "lodash": "^3.10.1",
-        "request": "^2.64.0",
+        "colors": "^1.1.2",
         "commander": "^2.9.0",
         "inquirer": "^0.11.4",
+        "lodash": "^3.10.1",
+        "nedb": "^1.2.1",
+        "request": "^2.64.0",
         "string-format": "^0.5.0",
-        "tmi.js": ">=0.0.24 <1.0.0"
+        "tmi.js": ">=0.0.24 <1.0.0",
+        "vorpal": "^1.7.7"
     },
     "devDependencies": {
         "chai": "^3.5.0",
